Add key components to documentation (#319)
* Move Key Concepts into its own section

* Add key components

* Add key-components

* Update the cards

--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -17,20 +17,20 @@ UpTrain is designed to be easy to use, and can be integrated into your existing 
     Get started with UpTrain in minutes
   </Card>
   <Card
-    title="Examples"
-    href="/examples/prompt-experiments"
-    icon="cube"
+    title="Managed Service"
+    href="/managed-services/overview"
+    icon="cloud"
     color="#0081eb"
   >
-    See how UpTrain can help your project
+    Easy remote access to the UpTrain toolkit 
   </Card>
   <Card
-    title="Key Concepts"
-    href="/getting-started/key-concepts"
+    title="Key Components"
+    href="/getting-started/key-components"
     icon="list"
     color="#b50e0e"
   >
-    The basic principles of UpTrain
+    The core working of UpTrain
   </Card>
   <Card
     title="API Reference"
@@ -39,5 +39,12 @@ UpTrain is designed to be easy to use, and can be integrated into your existing 
     color="#0fba20"
   >
     The UpTrain Python API
+  </Card>
+  <Card
+    title="Tutorials"
+    href="/tutorials/prompt-experiments"
+    icon="cube"
+    >
+    See how UpTrain can help your project
   </Card>
 </CardGroup>
