--- a/docs/tutorials/validation.mdx
+++ b/docs/tutorials/validation.mdx
@@ -222,4 +222,4 @@ for inputs in dataset.to_dicts()[:20]:
     print("\n")
 ```
 
-![validation_dashboard.png](https://github.com/uptrain-ai/uptrain/assets/43818888/3dbf3d6f-a0ad-46dd-8946-58a23ac55d08)
+<img width="1069" alt="validation_dashboard" src="https://github.com/uptrain-ai/uptrain/assets/108270398/26f8b32d-b943-47b6-acde-bd5325f11c37">
