--- a/docs/key-components/operator.mdx
+++ b/docs/key-components/operator.mdx
@@ -16,3 +16,5 @@ Each Operator implements two methods, which are to be run in order:
 Though operators can be used on their own, they are typically used in [Checks](/key-components/check), that make it easy to add [Charts](/key-components/chart) chain multiple operators together.  Using a `Check`, you won't have to manually perform the `setup()` and `run()` methods.  
 
 To learn more about Operators, see the [Operator documentation](https://uptrain-ai.github.io/uptrain/operators/Accuracy/).
+
+You can also create your own custom operators.  To learn more, see the [Custom Operator tutorial](/tutorials/custom-operator).
