--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -26,7 +26,7 @@ UpTrain is designed to be easy to use, and can be integrated into your existing 
   </Card>
   <Card
     title="Key Components"
-    href="/getting-started/key-components"
+    href="/key-components"
     icon="list"
     color="#b50e0e"
   >
