Update managed services

--- a/docs/managed-services/pricing.mdx
+++ b/docs/managed-services/pricing.mdx
@@ -4,7 +4,7 @@ description: Simple and easy pricing. Pay as you go. No hidden fees.
 ---
 
 
-We charge a flat rate of 1 credit for every evaluation on a single data point. 
+We charge a flat rate of 1 credit for every evaluation performed on a single data point. 
 
 There are two ways you can use the API:
 1. **Using the `evaluate` method** - This method is used to run a single evaluation on a dataset. The number of credits one will be charged is equal to the number of rows in the dataset. For example, if you have a dataset with 100 rows, you will be charged 100 credits.
