--- a/docs/tutorials/uptrain-api-client.mdx
+++ b/docs/tutorials/uptrain-api-client.mdx
@@ -124,6 +124,7 @@ Unlike the previouse method where you had to create a dataset in Python, this me
 - .csv
 - .json
 - .jsonl
+- .xlsx
 
 You can add the dataset file to the UpTrain platform using the `add_dataset` method.
 
