Add change to documentation

--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -3,9 +3,9 @@ title: "Introduction"
 description: "What is UpTrain?"
 ---
 
-**[UpTrain](https://uptrain.ai)** is a Python framework that helps users to check the performance of their LLM applications on aspects such as correctness, structural integrity, bias, hallucination, etc.
+**[UpTrain](https://uptrain.ai)** is an open-source tool to evaluate your LLM applications by quantifying their performance on aspects such as correctness, tonality,  hallucination, fluency, etc.
 
-UpTrain is designed to be easy to use, and can be integrated into your existing LLM codebase with minimal changes. It is also designed to be extensible, so that you can easily add your own checks and metrics.
+UpTrain provides a single line code integration into your existing LLM codebase to run model evaluations. Apart from open-source, you can also use UpTrain's managed service, available via an **[API call](/managed-services/overview)** or through **[UpTrain testing console](/managed-services/overview)**.
 
 <CardGroup cols={2}>
   <Card
