--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -3,7 +3,7 @@ title: "Introduction"
 description: "What is UpTrain?"
 ---
 
-**[UpTrain](https://uptrain.ai)** is an open-source tool to evaluate your LLM applications by quantifying their performance on aspects such as correctness, tonality,  hallucination, fluency, etc.
+**[UpTrain](https://uptrain.ai)** is an open-source tool to evaluate your LLM applications by quantifying their performance on aspects such as correctness, tonality,  hallucination, fluency, etc. Try out the demo **[here](https://demo.uptrain.ai/evals_demo/)**.
 
 UpTrain provides a single line code integration into your existing LLM codebase to run model evaluations. Apart from open-source, you can also use UpTrain's managed service, available via an **[API call](/managed-services/overview)** or through **[UpTrain testing console](/managed-services/overview)**.
 
