--- a/docs/tutorials/uptrain-api-client.mdx
+++ b/docs/tutorials/uptrain-api-client.mdx
@@ -22,7 +22,7 @@ pip install uptrain
 ### Create an API Client
 
 ```python
-from uptrain import APIClient, Settings
+from uptrain.framework import APIClient, Settings
 
 settings = Settings(
     uptrain_access_token=YOUR_API_KEY,
