--- a/docs/tutorials/validation.mdx
+++ b/docs/tutorials/validation.mdx
@@ -39,7 +39,7 @@ import json
 **This notebook uses the OpenAI API to generate text for prompts, make sure the env variable is populated with the API key.**
 
 ```python
-# os.environ["OPENAI_API_KEY"] = "..."
+os.environ["OPENAI_API_KEY"] = "..."
 ```
 
 # Let's first define our prompt and model
