--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -27,6 +27,7 @@ UPTRAIN_API_KEY = "up-***************"
 client = APIClient(uptrain_api_key=UPTRAIN_API_KEY)
 ```
 
+Note: Alternatively, if you do not wish to create an UpTrain account, you can pass an OpenAI API key as the `openai_api_key` argument to the `APIClient` constructor. These evaluations are also run on UpTrain's infrastructure.
 
 ### Create your data
 
