Re-order key components

--- a/docs/key-components/core-idea.mdx
+++ b/docs/key-components/core-idea.mdx
@@ -17,9 +17,10 @@ By leveraging UpTrain, you can experiment with different prompts and evaluate th
 
 Using UpTrain to evaluate LLMs and prompts is like building blocks. Each new block is built on top of the previous one, and the process continues until you have your own custom LLM pipeline. 
 
-There are four main components in UpTrain:
-1. [Operator](/key-components/operator)
-2. [Chart](/key-components/chart)
-3. [Check](/key-components/check)
-4. [CheckSet](/key-components/checkset)
-5. [Settings](/key-components/settings)
+There are six main components in UpTrain:
+1. [Evals](/key-components/evals)
+2. [Operator](/key-components/operator)
+3. [Chart](/key-components/chart)
+4. [Check](/key-components/check)
+5. [CheckSet](/key-components/checkset)
+6. [Settings](/key-components/settings)
